Checkstyle errors fixed