@@ -29,7 +29,8 @@ import java.util.UUID;
 import java.util.stream.Collectors;
 
 @Service
-public class ExtendedUserDetailsServiceImpl implements ExtendedUserDetailsService {
+public class ExtendedUserDetailsServiceImpl
+        implements ExtendedUserDetailsService {
 
     @Autowired
     private UserRepository userRepository;
@@ -60,7 +61,8 @@ public class ExtendedUserDetailsServiceImpl implements ExtendedUserDetailsServic
                 true,
                 true,
                 true,
-                Arrays.asList(user.get().isAdmin() ? new SimpleGrantedAuthority("ADMIN")
+                List.of(user.get().isAdmin()
+                        ? new SimpleGrantedAuthority("ADMIN")
                         : new SimpleGrantedAuthority("USER"))
         );
     }
@@ -69,14 +71,20 @@ public class ExtendedUserDetailsServiceImpl implements ExtendedUserDetailsServic
         final HttpServletRequest req = ((ServletRequestAttributes)
                 RequestContextHolder.getRequestAttributes()).getRequest();
 
-        final String usernameFromToken = jwtTokenUtil.getUsernameFromToken(req);
-        return userRepository.findByUsername(usernameFromToken).orElseThrow(RuntimeException::new);
+        final String usernameFromToken =
+                jwtTokenUtil.getUsernameFromToken(req);
+        return userRepository
+                .findByUsername(usernameFromToken)
+                .orElseThrow(RuntimeException::new);
     }
 
-    public List<UserNameIdResponse> findUsersByName(final FindUserByNameRequest findUserByNameRequest) {
+    public List<UserNameIdResponse> findUsersByName(
+            final FindUserByNameRequest findUserByNameRequest) {
         return userRepository.findAll().stream()
-                .filter(user -> user.getUsername().contains(findUserByNameRequest.getUsername()))
-                .map(user -> new UserNameIdResponse(user.getId(), user.getUsername()))
+                .filter(user -> user.getUsername()
+                        .contains(findUserByNameRequest.getUsername()))
+                .map(user -> new UserNameIdResponse(
+                        user.getId(), user.getUsername()))
                 .limit(10)
                 .collect(Collectors.toList());
     }
@@ -87,10 +95,12 @@ public class ExtendedUserDetailsServiceImpl implements ExtendedUserDetailsServic
 
     public User save(final User user) {
         try {
-            user.setPassword(bCryptPasswordEncoder.encode(user.getPassword()));
+            user.setPassword(bCryptPasswordEncoder
+                    .encode(user.getPassword()));
             return userRepository.save(user);
         } catch (Exception e) {
-            throw new BadArgumentException("Given values are not suitable for user account");
+            throw new BadArgumentException(
+                    "Given values are not suitable for user account");
         }
     }
 
@@ -100,11 +110,13 @@ public class ExtendedUserDetailsServiceImpl implements ExtendedUserDetailsServic
                 .orElseThrow(ResourceNotFoundException::new);
 
         // Delete all relationships with deleted user
-        relationshipRepository.deleteAll(relationshipRepository.findRelationshipsByRelationshipWith(user.getUUID()));
+        relationshipRepository.deleteAll(relationshipRepository
+                .findRelationshipsByRelationshipWith(user.getUUID()));
 
         // Delete user
         userRepository.delete(user);
-        return new DeleteResponse(request.getUuid(), "Successfully deleted user");
+        return new DeleteResponse(request.getUuid(),
+                "Successfully deleted user");
     }
 
 }
